// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchTradesREST spot 1`] = `
Array [
  Array [
    "https://www.bitstamp.net/api/v2/transactions/ethusd",
  ],
]
`;

exports[`fetchTradesREST spot 2`] = `
Array [
  Array [
    Object {
      "amount": 2.4861,
      "base": "USD",
      "id": "81273079",
      "price": 149.42,
      "quote": "ETH",
      "source": "bitstamp",
      "timestamp": 1547099274000,
    },
    true,
  ],
  Array [
    Object {
      "amount": 2.4191,
      "base": "USD",
      "id": "81273073",
      "price": 149.4,
      "quote": "ETH",
      "source": "bitstamp",
      "timestamp": 1547099246000,
    },
    false,
  ],
  Array [
    Object {
      "amount": 0.07883289,
      "base": "USD",
      "id": "81273071",
      "price": 149.43,
      "quote": "ETH",
      "source": "bitstamp",
      "timestamp": 1547099230000,
    },
    false,
  ],
  Array [
    Object {
      "amount": 0.9357,
      "base": "USD",
      "id": "81273060",
      "price": 149.45,
      "quote": "ETH",
      "source": "bitstamp",
      "timestamp": 1547099166000,
    },
    false,
  ],
]
`;

exports[`fetchTradesREST spotwith last localPair 1`] = `
Array [
  Array [
    "https://www.bitstamp.net/api/v2/transactions/ethusd?since=1234567890",
  ],
]
`;

exports[`fetchTradesREST spotwith last localPair 2`] = `
Array [
  Array [
    Object {
      "amount": 2.4861,
      "base": "USD",
      "id": "81273079",
      "price": 149.42,
      "quote": "ETH",
      "source": "bitstamp",
      "timestamp": 1547099274000,
    },
    true,
  ],
  Array [
    Object {
      "amount": 2.4191,
      "base": "USD",
      "id": "81273073",
      "price": 149.4,
      "quote": "ETH",
      "source": "bitstamp",
      "timestamp": 1547099246000,
    },
    false,
  ],
  Array [
    Object {
      "amount": 0.07883289,
      "base": "USD",
      "id": "81273071",
      "price": 149.43,
      "quote": "ETH",
      "source": "bitstamp",
      "timestamp": 1547099230000,
    },
    false,
  ],
  Array [
    Object {
      "amount": 0.9357,
      "base": "USD",
      "id": "81273060",
      "price": 149.45,
      "quote": "ETH",
      "source": "bitstamp",
      "timestamp": 1547099166000,
    },
    false,
  ],
]
`;

exports[`fetchTradesWS 1`] = `
Array [
  Array [
    "ethusd",
  ],
]
`;

exports[`fetchTradesWSForPair  1`] = `
Array [
  Array [
    "de504dc5763aeef9ff52",
  ],
]
`;

exports[`fetchTradesWSForPair  2`] = `
Array [
  Array [
    "trade",
    [Function],
  ],
]
`;

exports[`fetchTradesWSForPair  3`] = `
Array [
  Array [
    "error",
    [Function],
  ],
  Array [
    "closed",
    [Function],
  ],
]
`;

exports[`fetchTradesWSForPair  4`] = `
Array [
  Array [
    "{\\"price\\":1,\\"id\\":1234,\\"amount\\":12}",
    "quote-base",
  ],
]
`;

exports[`fetchTradesWSForPair  5`] = `
Array [
  Array [
    [Function],
    30000,
  ],
  Array [
    [Function],
    1000,
  ],
  Array [
    [Function],
    1000,
  ],
]
`;

exports[`fetchTradesWSForPair  6`] = `
Array [
  Array [
    "quote-base",
  ],
  Array [
    "quote-base",
  ],
  Array [
    "quote-base",
  ],
]
`;

exports[`handleWSTradeMessage spot 1`] = `
Array [
  Array [
    Object {
      "amount": 0.533,
      "base": "USD",
      "id": "81273582",
      "price": 149.16,
      "quote": "ETH",
      "source": "bitstamp",
      "timestamp": 1547100261000,
    },
    true,
  ],
]
`;
